<resources>
    <string name="app_name">AlarmForSalat</string>
    <string name="sample_readable_date">07 Mar 2021</string>
    <string name="sample_hijri_day">23</string>
    <string name="sample_hijri_week_day">Al Ahad</string>
    <string name="sample_hijri_ar_week_day">الاحد</string>
    <string name="sample_hijri_month">Rajab</string>
    <string name="sample_hijri_year">1442</string>
    <string name="sample_hijri_month_ar">رَجَب</string>
    <string name="sample_hijri_full_date">23-07-1442</string>
    <string name="sample_city_name">Ōsaka</string>
    <string name="sample_countr_name">Japan</string>
    <string name="comma">,</string>
    <string name="desc_no_loc">Your have not selected any location yet.</string>
    <string name="sample_time">5:40</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="school_of_thoughts">Madhab</string>
    <string name="adhan_methods">Adhan Methods</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="adhan_method">Adhan Method</string>
</resources>