<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/adhan_method">

        <ListPreference
            app:defaultValue="null"
            app:entries="@array/madhabs_entries"
            app:entryValues="@array/madhabs_entry_values"
            app:key="madhhab"
            app:title="@string/school_of_thoughts"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="null"
            app:entries="@array/adhan_methods"
            app:entryValues="@array/adhan_methods"
            app:key="methods"
            app:title="@string/adhan_methods"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>