<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_margin="40dp"
    android:orientation="vertical"
    android:padding="40dp">

    <TextView
        android:id="@+id/tvReadable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_readable_date" />

    <TextView
        android:id="@+id/tvHijriDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_hijri_day" />

    <TextView
        android:id="@+id/tvHijriWeekDayEn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_hijri_week_day" />


    <TextView
        android:id="@+id/tvHijriWeekDayAr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_hijri_ar_week_day" />

    <TextView
        android:id="@+id/tvHijriMonthEn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_hijri_month" />


    <TextView
        android:id="@+id/tvHijriMonthAr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_hijri_month_ar" />

    <TextView
        android:id="@+id/tvHijriYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_hijri_year" />

    <TextView
        android:id="@+id/tvHijriDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_hijri_full_date" />

</LinearLayout>